--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "dependencies": {
     "pusher-js": "^5.0.0",
+    "uglifyjs": "^2.4.11",
     "webpack": "^4.39.2"
   },
   "devDependencies": {
     "webpack-cli": "^3.3.6"
+  },
+  "scripts": {
+    "build": "npx webpack\nnpm run uglify",
+    "uglify": "npx uglifyjs dist/index.js -c -m --keep-fnames --keep-classnames > dist/index.min.js"
   }
 }
